tests/bad/func_ret_from_void.ae
/// fail: Cannot return value in void function

def foo() {
    return 5
}
